# particles-rs

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/examples/: Cargo.toml
src/examples/src/: main.rs
