[package]

name = "particles-rs-examples"
version = "0.0.1"
authors = ["Jeff Belgum <jeffbelgum@gmail.com>"]

[[bin]]

name = "particles-rs-example"
path = "src/main.rs"

[dependencies.particles]

git = "https://github.com/JeffBelgum/particles-rs"

[dependencies.hgl]

git = "https://github.com/cmr/hgl-rs"

[dependencies.glfw]

git = "https://github.com/bjz/glfw-rs"
